infra/k8s/bases/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-pong-ingress
  labels:
    name: log-pong-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: log-output-svc
            port:
             number: 3000
      - pathType: Exact
        path: "/pingpong"
        backend:
          service:
            name: pong-svc
            port: 
              number: 3000
